# sinlib

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.ipynb_checkpoints/: experiments.ipynb
data/.ipynb_checkpoints/: sinhala_chars_with_special_chars-checkpoint.txt
docs/: index.md  requirements.txt
docs/css/: custom.css  extra.css
docs/custom_theme/: main.html
docs/examples/: Typo Correction.md
examples/: example.ipynb  examples.ipynb
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
sinhala_tokenizers/: tokenizer.py
sinhala_tokenizers/.ipynb_checkpoints/: tokenizer-checkpoint.py
src/sinhala_tokenizers/: __init__.py
src/sinlib/: __init__.py  romanize.py  spellcheck.py  tokenizer.py  transliterate.py
src/sinlib/data/: char_map.json
src/sinlib/utils/: __init__.py  chars.py  dataset_utils.py  model_utils.py  preprocessing.py
src/sinlib/utils/data/: char_map.json  config.json  sinhala_chars_with_special_chars.txt  vocab.json  vocab_map.json
src/sinlib/utils/models/: transliterator_model.py
tests/: test_romanizer.py  test_spellcheck.py  test_tokenizer.py
utils/: preprocessing.py
