[project]
name = "sinlib"
version = "0.1.0"
description = "Sinhala NLP Toolkit"
authors = [
    { name = "Ransaka", email = "ransaka.ravihara@gmail.com" }
]
dependencies = [
    "numpy"
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.9.7, <3.12"
keywords = ["NLP","Sinhala", "python"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Code = "https://github.com/Ransaka/sinlib"
Docs = "https://github.com/Ransaka/sinlib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
